edit_style.css
    *[contenteditable] {
      margin: 1em auto;
	  min-height:2000px;
	   bottom:1px;
      padding: 10px;
      background: #fff;
      color: #111;
      border: 1px solid #ddd;
      outline: none;
      resize: both;
	  overflow:auto;
	  left:0;
	  right:0;
    }
	
    #execCommand {
      padding-left: 5em;
      min-height: 1em;
      line-height: 1em;
      color: #555;
    }
    footer {
      border-top: 1px solid #ccc;
    }
    #toolbar {
      border-bottom: 1px solid #ccc;
    }
    #toolbar dt {
      float: left;
      clear: both;
      width: 5em;
      line-height: 24px;
    }
    #toolbar dd {
      line-height: 24px;
    }
	
	
    #toolbar *[disabled] {
      opacity: 0.5;
    }
    #toolbar *[data-command="increaseFontSize"],
    #toolbar *[data-command="decreaseFontSize"] {
      background-image: none;
    }
    #toolbar *[type="checkbox"] {
      margin: 0;
      padding: 0;
      vertical-align: middle;
      background-image: none;
    }

